Add a crypto virtio device
